<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCEDC8">

<ScrollView
    android:id="@+id/ScrollViewEditEvent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:layout_above="@+id/buttonSendEditEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/TitleEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloCreateEvent"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/titleEditEvent_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:theme="@style/campotextoregistrohard"/>

        <TextView
            android:id="@+id/DescriptionEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/DescriptionEditEvent_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:theme="@style/campotextoregistrohard" />

        <TextView
            android:id="@+id/PointsEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/PointsEditEvent_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:theme="@style/campotextoregistrohard"/>

        <TextView
            android:id="@+id/CategoriesEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:textSize="20sp"
            android:theme="@style/campotextoregistrohard" />

        <Spinner
            android:id="@+id/CategoriesSpinnerEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:theme="@style/campotextoregistrohard" />

        <TextView
            android:id="@+id/DirectionEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction"
            android:textSize="20sp"
            android:theme="@style/campotextoregistrohard" />

        <EditText
            android:id="@+id/DirectionEditEvent_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/campotextoregistrohard" />

        <TextView
            android:id="@+id/DateTextEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/DirectionEditEvent_edit_text"
            android:text="@string/fecha_evento"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/lineDateEditEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DateTextEditEvent"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/editTextDateEditEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.97"
                android:ems="10"
                android:inputType="date" />

            <ImageButton
                android:id="@+id/DateEditEvent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:contentDescription="@string/fecha_del_evento_description"
                android:padding="10dp"
                android:tint="@android:color/darker_gray"
                app:srcCompat="@mipmap/ic_date_range_white_24dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/TimeTextEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lineDateEditEvent"
            android:text="@string/hora_evento"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/linearLayoutHourEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TimeTextEditEvent">

            <EditText
                android:id="@+id/HourEditEvent_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:theme="@style/campotextoregistrohard" />

            <TextView
                android:id="@+id/TwoPointsEditEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TwoPoints"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/MinEditEvent_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:theme="@style/campotextoregistrohard" />

        </LinearLayout>

        <TextView
            android:id="@+id/ImageEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutHourEditEvent"
            android:text="@string/Imagen"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/LinearLayoutImageEditEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ImageEditEventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen_del_evento"
                android:padding="10dp"
                android:background="@null"
                android:tint="@android:color/darker_gray"
                app:srcCompat="@mipmap/ic_date_range_white_24dp"  />

            <ImageView
                android:id="@+id/ImageSelectedEditEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

    <Button
        android:id="@+id/buttonSendEditEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:background="@drawable/buttonregisterloginshape"
        android:text="@string/guardar"
        android:textColor="@android:color/white" />
</RelativeLayout>